--- a/README.ORG
+++ b/README.ORG
@@ -1,8 +1,8 @@
 * Dependencies
 ** System Dependencies
 Arch linux\\
-Hyprland config based on: https://github.com/end-4/dots-hyprland\\
-uwufetch\\
+Hyprland config based on: https://github.com/end-4/dots-hyprland \\\
+uwufetch \\\
 fcitx5\\
 anthy\\
 emacs-nx\\
